--- a/css/popup.css
+++ b/css/popup.css
@@ -11,6 +11,14 @@
 }
 
 #popup-info1, #popup-info2 {
-	color: #00cc00;
 	font-size: 0.8em;
+}
+
+.form-control {
+	display: none;
+}
+
+.btn-info {
+	margin: 2px;
+	width: 45%;
 }
